fix: get back header z-index

--- a/project-management-app/src/app/shared/components/header/header/header.component.scss
+++ b/project-management-app/src/app/shared/components/header/header/header.component.scss
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 5000;
+  z-index: 50;
   padding: 0 3rem;
   border-bottom: 2px solid $color-white-darken;
   transition: all 0.3s ease-in-out;
